--- a/app.json
+++ b/app.json
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "feb15f3b-e2c6-4928-ab52-cfd58b6b435d"
+      }
+    },
+    "owner": "aksh03"
   }
 }
