--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
-    "react-native-web": "^0.19.10",
-    "expo-router": "^2.0.0",
+    "react-native-calendars": "^1.1303.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2"
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
