--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
@@ -27,7 +27,7 @@
     "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
